fix gap.

--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -5,7 +5,7 @@
 .leftContent {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 24px;
 	max-width: 539px;
 	align-items: flex-start;
 	z-index: 1;
